--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       sizes="32x32"
       href="./images/favicon.png"
     />
+    <link rel="stylesheet" href="./dist/style.css" />
     <title>Room homepage</title>
   </head>
   <body>
@@ -54,5 +55,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
 -->
+    <script src="./app/js/app.js"></script>
   </body>
 </html>
